[workspace]
members = [
    "heim",
    "heim-common",
    "heim-runtime",
    "heim-host",
    "heim-cpu",
    "heim-memory",

    # Removing anything we don't use at Moixa
    # "heim-derive",
    # "heim-disk",
    # "heim-net",
    # "heim-process",
    # "heim-virt",
    # "heim-sensors",

    # # Internal
    # "benchmarks",
    # "examples",
]

# Uncomment to use heim-process
# [patch.crates-io]
# # package-upgrades branch
# darwin-libproc = { git = "https://github.com/MoixaEnergy/darwin-libproc.git", rev = "cbd571e4be87a6603de328d1f1f0ad54d7bdfedf" }
