[workspace]
members = [
    "heim",
    "heim-common",
    "heim-runtime",
    "heim-host",
    "heim-cpu",
    "heim-memory",

    # Removing anything we don't use at Moixa
    # "heim-derive",
    # "heim-disk",
    # "heim-net",
    # "heim-process",
    # "heim-virt",
    # "heim-sensors",

    # # Internal
    # "benchmarks",
    # "examples",
]
