[package]
name = "heim-process"
version = "0.1.1-rc.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform processes information"
keywords = ["heim", "system", "process", "pid"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "actively-developed" }
github-actions = { repository = "heim-rs/heim", workflow = "Tier 1 CI" }

[dependencies]
heim-common = { version = "0.1.0-rc.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-rc.1", path = "../heim-runtime" }
heim-cpu = { version = "0.1.0-rc.1", path = "../heim-cpu" }
cfg-if = "1.0.0"
libc = "0.2.114"
lazy_static = "1.4.0"
ordered-float = { version = "2.10.0", default-features = false }
memchr = "2.4.1"
async-trait = "0.1.52"

[target.'cfg(unix)'.dependencies]
futures = { version = "0.3.19", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
heim-net = { version = "0.1.0-rc.1", path = "../heim-net" }
heim-host = { version = "0.1.0-rc.1", path = "../heim-host" }
smol = "1.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
heim-host = { version = "0.1.0-rc.1", path = "../heim-host" }
ntapi = "0.3.6"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
default-features = false
features = [
    "impl-default",
    "minwindef",
    "winnt",
    "winbase",
    "handleapi",
    "psapi",
    "processthreadsapi",
    "winerror",
    "tlhelp32",
    "wow64apiset",
    "memoryapi",
]

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"
darwin-libproc = "0.2.0"

[dev-dependencies]
heim-derive = { version = "0.1.0-rc.1", path = "../heim-derive" }
smol = "1.2.5"
futures = { version = "0.3.19", default-features = false }
futures-timer = "3.0.2"
which = { version = "4.2.4", default-features = false }
version-sync = "0.9.4"
static_assertions = "1.1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
